Fix requirements.txt format

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,16 @@
-fastapi uvicorn bertopic sentence-transformers pandas numpy scikit-learn feedparser
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+bertopic==0.15.0
+sentence-transformers==2.2.2
+pandas==2.1.3
+numpy==1.24.3
+scikit-learn==1.3.2
+feedparser==6.0.10
+sqlalchemy==2.0.23
+requests==2.31.0
+langchain==0.1.0
+langchain-community==0.0.10
+langchain-text-splitters==0.0.1
+langchain-core==0.1.10
+faiss-cpu==1.7.4
+huggingface-hub==0.19.4
