--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,15 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-bertopic==0.15.0
-sentence-transformers==2.2.2
-pandas==2.1.3
-numpy==1.24.3
-scikit-learn==1.3.2
-feedparser==6.0.10
-sqlalchemy==2.0.23
-requests==2.31.0
-langchain==0.1.0
-langchain-community==0.0.10
-langchain-text-splitters==0.0.1
-langchain-core==0.1.10
-faiss-cpu==1.7.4
-huggingface-hub==0.19.4
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+pandas>=2.2.0
+numpy>=1.26.0
+scikit-learn>=1.4.0
+requests>=2.31.0
+sqlalchemy>=2.0.0
+feedparser>=6.0.0
+langchain>=1.0.0
+langchain-community>=0.4.0
+langchain-text-splitters>=1.0.0
+langchain-core>=1.1.0
+sentence-transformers>=5.0.0
+faiss-cpu>=1.8.0
+huggingface-hub>=0.20.0
