--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,6 @@
-fastapi>=0.104.0
-uvicorn[standard]>=0.24.0
-pandas>=2.2.0
-numpy>=1.26.0
-scikit-learn>=1.4.0
-requests>=2.31.0
-sqlalchemy>=2.0.0
-feedparser>=6.0.0
-langchain>=1.0.0
-langchain-community>=0.4.0
-langchain-text-splitters>=1.0.0
-langchain-core>=1.1.0
-sentence-transformers>=5.0.0
-faiss-cpu>=1.8.0
-huggingface-hub>=0.20.0
+fastapi==0.104.1
+uvicorn==0.24.0
+pandas==2.2.0
+numpy==1.26.0
+requests==2.31.0
+sqlalchemy==2.0.23
